<resources>
    <string name="app_name">Baleadas Hermanas</string>
    <string name="txv_tituloLogin">Acceso</string>
    <string name="txv_hasOlvidadoContraseña">¿Has olvidado tu contraseña?</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="txt_usuario">Usuario</string>
    <string name="todo">TODO</string>
    <string name="icono">Icono</string>
    <string name="nombreUsuario">Nombre de usuario</string>
    <string name="empleados">Empleados</string>
    <string name="clientes">Clientes</string>
    <string name="inventario">Inventario</string>
    <string name="facturacion">Facturación</string>
    <string name="primerNombre">Primer nombre</string>
    <string name="segundoNombre">Segundo nombre</string>
    <string name="primerApellido">Primer apellido</string>
    <string name="segundoApellido">Segundo apellido</string>
    <string name="telefono">Teléfono</string>
    <string name="email">E-Mail</string>
    <string name="dni">DNI</string>
    <string name="rtn">RTN</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="nombreProducto">Nombre del producto</string>
    <string name="precioProducto">Precio del producto</string>
    <string name="cantidadProducto">Cantidad del producto</string>

</resources>